--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,14 @@ spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
-spring.datasource.url=jdbc:postgresql://dpg-cht5ndl269vccp3lrsr0-a.oregon-postgres.render.com:5432/spring_boot_render?useSSL=false&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=spring_boot_render_user
-spring.datasource.password=4AFf6g0rBDQCXxoNTEp0j6bZZoy6ccci
+#spring.datasource.url=jdbc:postgresql://dpg-cht5ndl269vccp3lrsr0-a.oregon-postgres.render.com:5432/spring_boot_render?useSSL=false&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true
+#spring.datasource.username=spring_boot_render_user
+#spring.datasource.password=4AFf6g0rBDQCXxoNTEp0j6bZZoy6ccci
+
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.url=jdbc:postgresql://dpg-cigoq1dph6erq6l6a6c0-a.frankfurt-postgres.render.com:5432/database_render_spring_localtatto?useSSL=false&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=database_render_spring_localtatto_user
+spring.datasource.password=JZOUwbyHqwz38OVQSfR1hzpSq78ILDQ4
+
 
