Creacion de estructura para imagenes y archivos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,7 @@ spring.datasource.url=jdbc:postgresql://dpg-cigoq1dph6erq6l6a6c0-a.frankfurt-pos
 spring.datasource.username=database_render_spring_localtatto_user
 spring.datasource.password=JZOUwbyHqwz38OVQSfR1hzpSq78ILDQ4
 
-
+#Imagenes
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=10MB
+media.location=classpath:/static/mediaFilesTatto
